    - fix sorting for mixed app/package display
  * softwarecenter/db/update.py:
    - write out archive section (mail, admin, ...) into the xapian DB
  * softwarecenter/view/catview.py:
    - fix sub-category jumping back to (0,0) on going back
    - support mixed app/package section querries
    - support menu additions via "/usr/share/app-install/menus.d/*.menu"

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 04 Jan 2010 16:38:31 +0100

software-center (1.1.6) lucid; urgency=low

  [ Michael Vogt ]
  * softwarecenter/view/pendingview.py:
    - fix race in _append_transaction()
  * softwarecenter/view/availablepane.py:
    - fix count of available applications in the status bar
    - append a pathbar element if a search is performed
  * softwarecenter/apt/apthistory.py:
    - add inteface to new /var/log/apt/history.log file
    - add find_terminal_log() that gives the matching terminal output
  * softwarecenter/db/database.py, softwarecenter/view/appview.py:
    - add higher ranks for exact package name matches
  * merged from lp:~lucian.grijincu/software-center/lucian 
    (many thanks)
  * softwarecenter/apt/aptcache.py:
    - add get_installed_automatic_depends_for_pkg() for better
      support for automatic removal
  * softwarecenter/backend/aptd.py:
    - remove no longer used dependencies on removal (LP: #467539)
  * softwarecenter/view/appview.py:
    - ensure we do not add duplicated entries on searches

  [ Jonathan Thomas ]
  * Correct dependency on the KDE PolicyKit 1 frontend (policykit-1-qt ->
    policykit-1-kde)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 04 Jan 2010 13:40:15 +0100

software-center (1.1.5) lucid; urgency=low

  * merged from lp:~gary-lasker/software-center/menu-install-remove-fix,
    many thanks!
  * merged lp:~mvo/software-center/sub-categories
  * data/software-center.menu.in, setup.cfg:
    - additional .menu file with custom extensions to structure 
      sub-categories for packages (stub only currently)