@@ -21,6 +21,7 @@ software-center (1.1.7) UNRELEASED; urgency=low
     - fix sub-category jumping back to (0,0) on going back
     - support mixed app/package section querries
     - support menu additions via "/usr/share/app-install/menus.d/*.menu"
+    - support SCChannel as match for (sub)menus
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 04 Jan 2010 16:38:31 +0100
 
